# nemopy

./: CLAUDE.md  CopilotReview.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/: DESIGN.md  DESIGN_APPENDICES.md  copilot-instructions.md
.github/agents/: my-agent.agent.md
.github/prompts/: Task-Brief.prompt.md
docs/: api.rst  conf.py  index.rst
nemopy/: __init__.py  _constructors.py  _core.py  _operators.py
tests/: test_constructors.py  test_core.py  test_scaffold.py  test_vec.py
vec/: __init__.py  _constructors.py  _core.py  _operators.py
