[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemopy"
version = "0.1.0"
description = "A column-vector-first NumPy wrapper with MATLAB-style matrix syntax."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Naeem Paruk" }]
keywords = ["numpy", "linear-algebra", "column-vectors", "matlab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
dev = [
    "pytest>=7.0",
    "pandas>=1.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Repository = "https://github.com/n3m0-wits/nemopy"
Issues = "https://github.com/n3m0-wits/nemopy/issues"

[tool.setuptools.packages.find]
include = ["nemopy*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
